--- a/src/components/Navbar2/NavbarMid.module.css
+++ b/src/components/Navbar2/NavbarMid.module.css
@@ -1,21 +1,9 @@
-.navmid {
-    height: 5em;
-    border-bottom: 1px solid #E9E9E9;
-
-}
-
 .title {
-    font-size: large;
-    color: rgb(3, 3, 3);
-    margin-left: 5cm;
+   font-size: xx-large;
+   color: #20D3C2;
+   margin-left: 14rem;
 }
-
-
-
-.navbottom {
-    background-color: #20D3C2;
-}
-
 .myacc {
    cursor: pointer; 
+   margin-left: 70rem;
 }
