--- a/src/components/Navbar2/NavbarBottom.module.css
+++ b/src/components/Navbar2/NavbarBottom.module.css
@@ -1,7 +1,7 @@
 .navbot{
     width: 100%;
     display: flex;
-
+    height: 2em;
 }
 
 .links{
@@ -29,13 +29,14 @@
 .linkcategory {
     background-color:#20D3C2;
     text-decoration: none;
+    color: white;
     padding-left: 1rem;
     padding-right: 1rem;
 }
 
 .linkcategory:visited 
 {
-color: black;
+    color: white;
 }
 
 .linkcategory:hover 
